unpackaged/main/default/objects/Order_Event__c/Order_Event__c.object-meta.xml
<CustomObject>
    <label>Order Event</label>
    <nameField>
        <label>Order Event</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>