unpackaged/main/default/objects/Order_Event__c/fields/Criteria__c.field-meta.xml
<CustomField>
    <fullName>Criteria__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Criteria?</label>
    <type>Checkbox</type>
</CustomField>