unpackaged/main/default/objects/Order_Event__c/fields/InitialCriteria__c.field-meta.xml
<CustomField>
    <fullName>InitialCriteria__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initial Criteria</label>
    <type>Checkbox</type>
</CustomField>