unpackaged/main/default/objects/Order_Event__c/fields/Job_Event__c.field-meta.xml
<CustomField>
    <fullName>Job_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Event</label>
    <referenceTo>Job_Event__c</referenceTo>
    <relationshipLabel>Job Triggered Events</relationshipLabel>
    <relationshipName>Job_Triggered_Events</relationshipName>
    <type>Lookup</type>
</CustomField>