unpackaged/main/default/objects/Order_Event__c/fields/OrderID__c.field-meta.xml
<CustomField>
    <fullName>OrderID__c</fullName>
    <label>Order ID</label>
    <length>11</length>
    <required>true</required>
    <type>Text</type>
</CustomField>