unpackaged/main/default/objects/Order_Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Process_Group__c</columns>
    <columns>Qualifying_Object__c</columns>
    <columns>Criteria__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>